--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
         conversar?</p>
       <div class="apresentacao__links">
         <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-        <a class="apresentacao__links__navegacao" href="https://github.com/rafaballerini">
+        <a class="apresentacao__links__navegacao" href="https://github.com/karineyasmin">
           <img src="./assets/github.png">
           Github
         </a>
-        <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/rafaellaballerini">
+        <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/karine-yasmin">
           <img src="./assets/linkedin.png">
-          linkedin
+          LinkedIn
         </a>
-        <a class="apresentacao__links__navegacao" href="https://twitch.tv/guilimadev">
-          <img src="./assets/twitch.png">
-          Twitch
+        <a class="apresentacao__links__navegacao" href="https://instagram/ka.yas_">
+          <img src="./assets/instagram.png">
+          Instagran
         </a>
       </div>
     </section>
