fixed url instagram

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           <img src="./assets/linkedin.png">
           LinkedIn
         </a>
-        <a class="apresentacao__links__navegacao" href="https://instagram/ka.yas_">
+        <a class="apresentacao__links__navegacao" href="https://instagram.com/ka.yas_">
           <img src="./assets/instagram.png">
-          Instagran
+          Instagram
         </a>
       </div>
     </section>
